--- a/front/src/app/shared/features/cart/cart.component.html
+++ b/front/src/app/shared/features/cart/cart.component.html
@@ -19,6 +19,6 @@
         <p><strong>Total: </strong>{{ totalPrice | currency:'EUR' }}</p>
     </div>
 
-    <p-messages></p-messages>
+    <p-toast />
     
 </div>
